--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,45 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <style>
+    .app-loading {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      font-family: 'Roboto', sans-serif;
+    }
+
+    .app-error {
+      color: #f44336;
+      text-align: center;
+      max-width: 600px;
+      margin: 20px;
+      padding: 20px;
+      border: 1px solid #f44336;
+      border-radius: 4px;
+      display: none;
+    }
+  </style>
+  <script>
+    window.onerror = function (msg, url, line, col, error) {
+      console.error('Error:', msg, 'at', url, 'line', line);
+      document.querySelector('.app-error').style.display = 'block';
+      return false;
+    };
+  </script>
 </head>
 
 <body class="mat-typography">
-  <app-root></app-root>
+  <app-root>
+    <div class="app-loading">
+      <h2>Loading NameDropper...</h2>
+      <div class="app-error">
+        Error loading the application. Please check the console for details or try refreshing the page.
+      </div>
+    </div>
+  </app-root>
 </body>
 
 </html>
